2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp:
	Fix wrong color settings in default color table.

	* src/termview.cpp:
	Re-enable usage of m_CharPaddingX in character width calculation.
	Draw underlines of hyperlnks in different color.

	* src/site.cpp:
	* src/site.h:
	Add m_UseExternalTelnet and m_UseExternalSSH.

	* src/mainframe.cpp:
	Set proper hyperlink color on CTelnetView creation.

	* src/appconfig.cpp:
	Add hyperlink color settings.

	* src/telnetview.cpp (CTelnetView::OnKeyDown):
	Fix malfunction of keyboard input.

	* src/telnetcon.cpp (CTelnetCon::Connect), 
	(CTelnetCon::Close), (CTelnetCon::OnSocket):
	Add forkpty support and some bug fix.

	* configure.ac:
	Add -lutil to $LIBS.

2005-07-13  Jim Huang  <jserv@kaffe.org>

	* pcmanx-pure-gtk2.spec.in,
	configure.ac,
	Makefile.am:
	Generate package information with autotools.

2005-07-13  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp (CTermData::OnLineModified),
	src/telnetcon.cpp (CTelnetCon::OnLineModified), (CTelnetCon::OnBellTimer)
	(CTelnetCon::OnNewIncomingMessage):
	Add support to new incoming message detection.
	This interface can be used for adding automation in the future.
	All automation can be done in CTelnetCon::OnLineModified and
	CTelnetCon::OnNewIncomingMessage.

2005-07-12  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::OnPaint), (CTermView::DrawChar):
	Greatly improve drawing performance by update invalid area only.
	No more flicker will be seen when popup menus showed.

	* src/mainframe.cpp:
	Add "Reconnect" menu item and its handler.
	Make text colors of tabs indicate the state of connections.
	Fix the bug of "Confirm before closing connected connections".

	* src/telnetcon.cpp (CTelnetCon::Reconnect), 
	(CTelnetCon::OnConnect), (CTelnetCon::OnClose):
	Update tab title of connection when state chages.
	Minor bug fix.

2005-07-12  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
