@@ -364,7 +364,8 @@ void CTermData::UpdateCaret()
 {
 	int x = m_CaretPos.x * m_pView->m_CharW;
 	int y = (m_CaretPos.y + 1) * m_pView->m_CharH - 2;
-	m_pView->m_Caret.Move( x, y );
+	int shift = (m_pView->m_Widget->allocation.width - m_pView->m_CharW * 80) >> 1;
+	m_pView->m_Caret.Move( x + shift, y );
 }
 
 void CTermData::InsertNewLine(int y, int count)
